chore(): fix responsive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
-  "cSpell.enableFiletypes": [
-    "!html",
-    "!css"
-  ],
   "cSpell.words": [
+    "Bruhhh",
     "gsap",
     "Hakari",
+    "Hikari",
     "Minh",
     "Navs",
-    "Nekitori"
+    "Neki",
+    "Nekitori",
+    "Neko"
   ]
 }
