♻️ refactor(pages): reorganize site structure and navigation
- rename and redistribute 'skill' page content to 'about' and 'projects'
- rename and redistribute 'project' page content to 'about' and 'projects'
- introduce new 'skills' and 'works' pages with initial structure
- update `pagesConfig.json` to reflect new page routes and properties

--- a/pages/pagesConfig.json
+++ b/pages/pagesConfig.json
@@ -2,10 +2,16 @@
   "home": {
     "fitWindow": true
   },
-  "skill": {
+  "works": {
+    "fitWindow": false
+  },
+  "skills": {
     "fitWindow": true
   },
-  "project": {
+  "projects": {
+    "fitWindow": false
+  },
+  "about": {
     "fitWindow": false
   }
 }
